--- a/Javascript/Exemplos de Sala de Aula/2025-04-16/Exemplo001.html
+++ b/Javascript/Exemplos de Sala de Aula/2025-04-16/Exemplo001.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Exemplo - onclick no HTML</title>
-</head>
-<body>
-  <h2>Exemplo: onclick no HTML</h2>
-  <button onclick="alert('Cliquei no botão 1!')">Clique aqui (HTML)</button>
-</body>
+    <head>
+
+        <script>
+            alert("Oswaldo")
+        </script>
+
+    </head>
+    <body>
+        <p>
+            Vovo viu a uva
+        </p>
+        <p>
+            The books on the table
+        </p>
+    </body>
 </html>
