--- a/Javascript/Exemplos de Sala de Aula/2025-04-16/Exemplo002.html
+++ b/Javascript/Exemplos de Sala de Aula/2025-04-16/Exemplo002.html
@@ -1,17 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Exemplo - onclick no JavaScript</title>
-</head>
-<body>
-  <h2>Exemplo: onclick no JavaScript</h2>
-  <button id="botao2">Clique aqui (JS com onclick)</button>
 
-  <script>
-    const botao2 = document.getElementById("botao2");
-    botao2.onclick = function() {
-      alert("Cliquei no botão 2!");
-    };
-  </script>
-</body>
+<html>
+    <head>
+
+
+
+    </head>
+
+    <body>
+        <p>
+            Vovo viu a uva
+        </p>
+
+        <p>
+            The books on the table
+        </p>
+
+        <script>
+
+            alert("Oswaldo")
+
+        </script>
+        
+    </body>
+
 </html>
