--- a/Javascript/Exemplos de Sala de Aula/2025-04-16/Exemplo003.html
+++ b/Javascript/Exemplos de Sala de Aula/2025-04-16/Exemplo003.html
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Exemplo 3 - addEventListener</title>
-</head>
-<body>
-  <h2>Exemplo 3: addEventListener</h2>
-  <button id="botao3">Clique aqui (JS com addEventListener)</button>
 
-  <script>
-    const botao3 = document.getElementById("botao3");
-    botao3.addEventListener("click", function() {
-      alert("Cliquei no botão 3!");
-    });
-  </script>
-</body>
+<html>
+    <head>
+
+
+
+    </head>
+
+    <body>
+        <p>
+            Vovo viu a uva
+        </p>
+
+        <script>
+
+            alert("Oswaldo")
+
+        </script>
+        
+
+        <p>
+            The books on the table
+        </p>
+
+
+    </body>
+
 </html>
